--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "task-manager-api",
   "version": "1.0.0",
   "description": "build a simple RESTful API to manage tasks for a fictional \"Task Management System.\" The system should allow users to create, read, update, and delete tasks. ",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "Anurup Mondal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
